# openhands

./: .gitignore  README.md  run_add_swagger_to_hplms_be copy.py  run_add_swagger_to_hplms_be.py  run_hplms_be_architect_documentation.py  run_hplms_be_thay_doi_db_question.py  run_mcp_internet.py  run_mcp_meeting_minute.py  run_mcp_meeting_minute_v2.py  run_meeting_member_vy.py  run_prepare_steps_for_repo_cloudflare_workers.py  run_prepare_steps_for_tech_doc_hplmsbe.py  run_prepare_steps_for_tech_doc_ytebe.py
apps/mcp_gen_img_face_ref/: pyproject.toml  server.py
engine/: base_step.py  config.py  pipeline.py  runner.py
mcp_internet/: README.md  claude_desktop_config.json
mcp_meeting_minutes/: .env.example  AGENTS.md  COMPLETION_SUMMARY.md  README.md  claude_desktop_config.json  demo.py  requirements.txt  server.py  test_server.py
mcp_meeting_minutes_v2/: .gitignore  LICENSE  README.md  demo.py  requirements.txt  server.py
meeting_member_vy/: .gitignore  README.md  audio_processor.py  demo.py  requirements.txt  test.py  test_audio.py
openhands_operation/: README.md  base_step.py  config.py  pipeline.py  requirements.txt  runner.py
openhands_v2/: README.md  base_step.py  config.py
plans/: album_photo_hv_from_context.md  code_examples.md  fasthtml_executor_plan.md  mcp_integration_architecture.md  mcp_integration_plan.md  per_step_model_configuration.md  proposed_structure.md  refactoring_plan.md
scripts/: run_add_swagger_to_hplms_be.py  run_documents_hmuh_get_related_code.py  run_documents_hmuh_viet_srs_v4.py  run_hplms_be_architect_documentation.py  (+17 more)
(+103 files in other folders)
